--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>app</title>
+    <title>WifFee</title>
   </head>
   <body>
     <div id="app"></div>
